<resources>
    <string name="app_name">हिंदू चालीसा</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">हिंदू चालीसा</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_hanuman_chalisa">श्री हनुमान चालीसा</string>
    <string name="menu_ganesh_chalisa">श्री गणेश चालीसा</string>
    <string name="menu_shiv_chalisa">श्री शिव चालीसा</string>
    <string name="menu_durga_chalisa">श्री दुर्गा चालीसा</string>
    <string name="menu_ashtak_mantra">श्री संकट मोचन हनुमानाष्टक</string>
    <string name="menu_mahamritunjay_mantra">महामृत्युंजय मंत्र</string>
    <string name="menu_narsimha_mantra">श्री नृसिंह मंत्र</string>
    <string name="menu_madhurashtakam_mantra">मधुराष्टकम्: अधरं मधुरं वदनं मधुरं</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_chalisa">चालीसा</string>
    <string name="menu_mantra">मंत्र</string>
    <string name="hanumanashtakvalue">
        <html>
        <head></head>
        <body style="text-align:justify;color:gray;background-color:black;">
         "
    बाल समय रवि भझी लियो तब,
    तीनहुं लोक भयो अंघियारो ।

    ताहि सों त्रास भयो जग को,
    यह संकट काहु सों जात न टारो ।।

    देवन आनि करी बिनती तब,
    छाड़ी दियो रवि कष्ट निवारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    बालि की त्रास कपीस बसैं गिरी,
    जात महाप्रभु पंथ निहारो ।

    चौंकि महामुनि साप दियो तब,
    चाहिए कौन बिचार बिचारो ।।

    कैदिज रूप लिवाय महाप्रभु,
    सो तुम दास के सोक निवारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    अंगद के संग लेन गए सिय,
    खोज कपीस यह बैन उचारो ।

    जीवत ना बचिहौ हम सो जु,
    बिना सुधि लाये इहाँ पगु घारो ।।

    हेरी थके तट सिन्धु सबे तब,
    लाए सिया-सुधि प्राण उबारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    रावण त्रास दई सिय को सब,
    राझसी सों कही सोक निवारो ।

    ताहि समय हनुमान महाप्रभु,
    जाए महा रजनीचर मरो ।।

    चाहत सीय असोक सों आगि सु,
    दै प्रभुमुद्रिका सोक निवारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    बान लाग्यो उर लछिमन के तब,
    प्राण तजे सूत रावन मारो ।

    लै गृह बैघ सुषेन समेत,
    तबै गिरी द्रोण सु बीर उपारो ।।

    आनि सजीवन हाथ दिए तब,
    लछिमन के तुम प्राण उबारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    रावण जुघ अजान कियो तब,
    नाग कि फॉस सबै सिर डारो ।

    श्रीरघुनाथ समेत सबै दल,
    मोह भयो यह संकट भारो ।।

    आनि खगेस तबै हनुमान जु,
    बंधन काटि सुत्रास निवारो ।


    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    बंधू समेत जबै अहिरावन,
    लै रघुनाध पताल सिधारो ।

    देबिहिं पूजि भली बिधि सों बलि,
    देउ सबै मिलि मंत्र बिचारो ॥

    जाय सहाय भयो तब ही,
    अहिरावण सैन्य समेत सँहारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।


    काज किये बड़ देवन के तुम,
    बीर महाप्रभु देखि बिचारो ।

    कौन सो संकट मोर गरीब को,
    जो तुमसे नहिं जात है टारो ॥

    बेगि हरो हनुमान महाप्रभु,
    जो कछु संकट होए हमारो ।

    को नही जानत है जग में कपि,
    संकटमोचन नाम तिहारो ।।

    ।। दोहा ।।
    लाल देह लाली लसे,
    अरु धरि लाल लंगूर।
    वज्र देह दानव दलन,
    जय जय जय कपि सूर ||

            "
         </body>
        </html>
    </string>
    <string name="hanumanchalisavalue">
        <html>
        <head></head>
        <body style="text-align:justify;color:gray;background-color:black;">
         "
।।दोहा।।
श्री गुरु चरण सरोज रज,
निज मन मुकुर सुधार |
बरनौ रघुवर बिमल जसु,
जो दायक फल चारि |

बुद्धिहीन तनु जानि के,
सुमिरौ पवन कुमार |
बल बुद्धि विद्या देहु मोहि,
हरहु कलेश विकार ||

।।चौपाई।।

जय हनुमान ज्ञान गुन सागर,
जय कपीस तिंहु लोक उजागर |
रामदूत अतुलित बल धामा,
अंजनि पुत्र पवन सुत नामा ||

महाबीर बिक्रम बजरंगी,
कुमति निवार सुमति के संगी |
कंचन बरन बिराज सुबेसा,
कान्हन कुण्डल कुंचित केसा ||

हाथ ब्रज औ ध्वजा विराजे,
कान्धे मूंज जनेऊ साजे |
शंकर सुवन केसरी नन्दन,
तेज प्रताप महा जग बन्दन ||

विद्यावान गुनी अति चातुर,
राम काज करिबे को आतुर |
प्रभु चरित्र सुनिबे को रसिया,
रामलखन सीता मन बसिया ||

सूक्ष्म रूप धरि सियंहि दिखावा,
बिकट रूप धरि लंक जरावा |
भीम रूप धरि असुर संहारे,
रामचन्द्र के काज सवारे ||

लाये सजीवन लखन जियाये,
श्री रघुबीर हरषि उर लाये |
रघुपति कीन्हि बहुत बड़ाई,
तुम मम प्रिय भरत सम भाई ||

सहस बदन तुम्हरो जस गावें,
अस कहि श्रीपति कण्ठ लगावें |
सनकादिक ब्रह्मादि मुनीसा,
नारद सारद सहित अहीसा ||

जम कुबेर दिगपाल कहाँ ते,
कबि कोबिद कहि सके कहाँ ते |
तुम उपकार सुग्रीवहिं कीन्हा,
राम मिलाय राज पद दीन्हा ||

तुम्हरो मन्त्र विभीषन माना,
लंकेश्वर भये सब जग जाना |
जुग सहस्र जोजन पर भानु,
लील्यो ताहि मधुर फल जानु ||

प्रभु मुद्रिका मेलि मुख मांहि,
जलधि लाँघ गये अचरज नाहिं |
दुर्गम काज जगत के जेते,
सुगम अनुग्रह तुम्हरे तेते ||

राम दुवारे तुम रखवारे,
होत न आज्ञा बिनु पैसारे |
सब सुख लहे तुम्हारी सरना,
तुम रक्षक काहें को डरना ||

आपन तेज सम्हारो आपे,
तीनों लोक हाँक ते काँपे |
भूत पिशाच निकट नहीं आवें,
महाबीर जब नाम सुनावें ||

नासे रोग हरे सब पीरा,
जपत निरंतर हनुमत बीरा |
संकट ते हनुमान छुड़ावें,
मन क्रम बचन ध्यान जो लावें ||

सब पर राम तपस्वी राजा,
तिनके काज सकल तुम साजा |
और मनोरथ जो कोई लावे,
सोई अमित जीवन फल पावे ||

चारों जुग परताप तुम्हारा,
है परसिद्ध जगत उजियारा |
साधु संत के तुम रखवारे,
असुर निकंदन राम दुलारे ||

अष्ट सिद्धि नौ निधि के दाता,
अस बर दीन्ह जानकी माता
राम रसायन तुम्हरे पासा,
सदा रहो रघुपति के दासा ||

तुम्हरे भजन राम को पावें,
जनम जनम के दुख बिसरावें |
अन्त काल रघुबर पुर जाई,
जहाँ जन्म हरि भक्त कहाई ||

और देवता चित्त न धरई,
हनुमत सेई सर्व सुख करई |
संकट कटे मिटे सब पीरा,
जपत निरन्तर हनुमत बलबीरा ||

जय जय जय हनुमान गोसाईं,
कृपा करो गुरुदेव की नाईं |
जो सत बार पाठ कर कोई,
छूटई बन्दि महासुख होई ||

जो यह पाठ पढे हनुमान चालीसा,
होय सिद्धि साखी गौरीसा |
तुलसीदास सदा हरि चेरा,
कीजै नाथ हृदय मँह डेरा ||

।।दोहा।।
पवन तनय संकट हरन,
मंगल मूरति रूप |
राम लखन सीता सहित,
हृदय बसहु सुर भूप ||

            "
         </body>
        </html>
    </string>
    <string name="shivchalisavalue">
        <html>
        <head></head>
        <body style="text-align:justify;color:gray;background-color:black;">
         "
॥ दोहा ॥
जय गणेश गिरिजा सुवन,
मंगल मूल सुजान ।
कहत अयोध्यादास तुम,
देहु अभय वरदान ॥

॥ चौपाई ॥
जय गिरिजा पति दीन दयाला ।
सदा करत सन्तन प्रतिपाला ॥

भाल चन्द्रमा सोहत नीके ।
कानन कुण्डल नागफनी के ॥

अंग गौर शिर गंग बहाये ।
मुण्डमाल तन क्षार लगाए ॥

वस्त्र खाल बाघम्बर सोहे ।
छवि को देखि नाग मन मोहे ॥

मैना मातु की हवे दुलारी ।
बाम अंग सोहत छवि न्यारी ॥

कर त्रिशूल सोहत छवि भारी ।
करत सदा शत्रुन क्षयकारी ॥

नन्दि गणेश सोहै तहँ कैसे ।
सागर मध्य कमल हैं जैसे ॥

कार्तिक श्याम और गणराऊ ।
या छवि को कहि जात न काऊ ॥

देवन जबहीं जाय पुकारा ।
तब ही दुख प्रभु आप निवारा ॥

किया उपद्रव तारक भारी ।
देवन सब मिलि तुमहिं जुहारी ॥

तुरत षडानन आप पठायउ ।
लवनिमेष महँ मारि गिरायउ ॥

आप जलंधर असुर संहारा ।
सुयश तुम्हार विदित संसारा ॥

त्रिपुरासुर सन युद्ध मचाई ।
सबहिं कृपा कर लीन बचाई ॥

किया तपहिं भागीरथ भारी ।
पुरब प्रतिज्ञा तासु पुरारी ॥

दानिन महँ तुम सम कोउ नाहीं ।
सेवक स्तुति करत सदाहीं ॥

वेद नाम महिमा तव गाई।
अकथ अनादि भेद नहिं पाई ॥

प्रकटी उदधि मंथन में ज्वाला ।
जरत सुरासुर भए विहाला ॥

कीन्ही दया तहं करी सहाई ।
नीलकण्ठ तब नाम कहाई ॥

पूजन रामचन्द्र जब कीन्हा ।
जीत के लंक विभीषण दीन्हा ॥

सहस कमल में हो रहे धारी ।
कीन्ह परीक्षा तबहिं पुरारी ॥

एक कमल प्रभु राखेउ जोई ।
कमल नयन पूजन चहं सोई ॥

कठिन भक्ति देखी प्रभु शंकर ।
भए प्रसन्न दिए इच्छित वर ॥

जय जय जय अनन्त अविनाशी ।
करत कृपा सब के घटवासी ॥

दुष्ट सकल नित मोहि सतावै ।
भ्रमत रहौं मोहि चैन न आवै ॥

त्राहि त्राहि मैं नाथ पुकारो ।
येहि अवसर मोहि आन उबारो ॥

लै त्रिशूल शत्रुन को मारो ।
संकट से मोहि आन उबारो ॥

मात-पिता भ्राता सब होई ।
संकट में पूछत नहिं कोई ॥

स्वामी एक है आस तुम्हारी ।
आय हरहु मम संकट भारी ॥

धन निर्धन को देत सदा हीं ।
जो कोई जांचे सो फल पाहीं ॥

अस्तुति केहि विधि करैं तुम्हारी ।
क्षमहु नाथ अब चूक हमारी ॥

शंकर हो संकट के नाशन ।
मंगल कारण विघ्न विनाशन ॥

योगी यति मुनि ध्यान लगावैं ।
शारद नारद शीश नवावैं ॥

नमो नमो जय नमः शिवाय ।
सुर ब्रह्मादिक पार न पाय ॥

जो यह पाठ करे मन लाई ।
ता पर होत है शम्भु सहाई ॥

ॠनियां जो कोई हो अधिकारी ।
पाठ करे सो पावन हारी ॥

पुत्र हीन कर इच्छा जोई ।
निश्चय शिव प्रसाद तेहि होई ॥

पण्डित त्रयोदशी को लावे ।
ध्यान पूर्वक होम करावे ॥

त्रयोदशी व्रत करै हमेशा ।
ताके तन नहीं रहै कलेशा ॥

धूप दीप नैवेद्य चढ़ावे ।
शंकर सम्मुख पाठ सुनावे ॥

जन्म जन्म के पाप नसावे ।
अन्त धाम शिवपुर में पावे ॥

कहैं अयोध्यादास आस तुम्हारी ।
जानि सकल दुःख हरहु हमारी ॥

॥ दोहा ॥
नित्त नेम कर प्रातः ही,
पाठ करौं चालीसा ।
तुम मेरी मनोकामना,
पूर्ण करो जगदीश ॥

मगसर छठि हेमन्त ॠतु,
संवत चौसठ जान ।
अस्तुति चालीसा शिवहि,
पूर्ण कीन कल्याण ॥

            "
         </body>
        </html>
    </string>
    <string name="ganeshchalisavalue">
        <html>
        <head></head>
        <body style="text-align:justify;color:gray;background-color:black;">
         "
॥ दोहा ॥
जय गणपति सदगुण सदन,
कविवर बदन कृपाल ।
विघ्न हरण मंगल करण,
जय जय गिरिजालाल ॥

॥ चौपाई ॥
जय जय जय गणपति गणराजू ।
मंगल भरण करण शुभः काजू ॥

जै गजबदन सदन सुखदाता ।
विश्व विनायका बुद्धि विधाता ॥

वक्र तुण्ड शुची शुण्ड सुहावना ।
तिलक त्रिपुण्ड भाल मन भावन ॥

राजत मणि मुक्तन उर माला ।
स्वर्ण मुकुट शिर नयन विशाला ॥

पुस्तक पाणि कुठार त्रिशूलं ।
मोदक भोग सुगन्धित फूलं ॥

सुन्दर पीताम्बर तन साजित ।
चरण पादुका मुनि मन राजित ॥

धनि शिव सुवन षडानन भ्राता ।
गौरी लालन विश्व-विख्याता ॥

ऋद्धि-सिद्धि तव चंवर सुधारे ।
मुषक वाहन सोहत द्वारे ॥

कहौ जन्म शुभ कथा तुम्हारी ।
अति शुची पावन मंगलकारी ॥

एक समय गिरिराज कुमारी ।
पुत्र हेतु तप कीन्हा भारी ॥

भयो यज्ञ जब पूर्ण अनूपा ।
तब पहुंच्यो तुम धरी द्विज रूपा ॥

अतिथि जानी के गौरी सुखारी ।
बहुविधि सेवा करी तुम्हारी ॥

अति प्रसन्न हवै तुम वर दीन्हा ।
मातु पुत्र हित जो तप कीन्हा ॥

मिलहि पुत्र तुहि, बुद्धि विशाला ।
बिना गर्भ धारण यहि काला ॥

गणनायक गुण ज्ञान निधाना ।
पूजित प्रथम रूप भगवाना ॥

अस कही अन्तर्धान रूप हवै ।
पालना पर बालक स्वरूप हवै ॥

बनि शिशु रुदन जबहिं तुम ठाना ।
लखि मुख सुख नहिं गौरी समाना ॥

सकल मगन, सुखमंगल गावहिं ।
नाभ ते सुरन, सुमन वर्षावहिं ॥

शम्भु, उमा, बहुदान लुटावहिं ।
सुर मुनिजन, सुत देखन आवहिं ॥

लखि अति आनन्द मंगल साजा ।
देखन भी आये शनि राजा ॥

निज अवगुण गुनि शनि मन माहीं ।
बालक, देखन चाहत नाहीं ॥

गिरिजा कछु मन भेद बढायो ।
उत्सव मोर, न शनि तुही भायो ॥

कहत लगे शनि, मन सकुचाई ।
का करिहौ, शिशु मोहि दिखाई ॥

नहिं विश्वास, उमा उर भयऊ ।
शनि सों बालक देखन कहयऊ ॥

पदतहिं शनि दृग कोण प्रकाशा ।
बालक सिर उड़ि गयो अकाशा ॥

गिरिजा गिरी विकल हवै धरणी ।
सो दुःख दशा गयो नहीं वरणी ॥

हाहाकार मच्यौ कैलाशा ।
शनि कीन्हों लखि सुत को नाशा ॥

तुरत गरुड़ चढ़ि विष्णु सिधायो ।
काटी चक्र सो गज सिर लाये ॥

बालक के धड़ ऊपर धारयो ।
प्राण मन्त्र पढ़ि शंकर डारयो ॥

नाम गणेश शम्भु तब कीन्हे ।
प्रथम पूज्य बुद्धि निधि, वर दीन्हे ॥

बुद्धि परीक्षा जब शिव कीन्हा ।
पृथ्वी कर प्रदक्षिणा लीन्हा ॥

चले षडानन, भरमि भुलाई ।
रचे बैठ तुम बुद्धि उपाई ॥

चरण मातु-पितु के धर लीन्हें ।
तिनके सात प्रदक्षिण कीन्हें ॥

धनि गणेश कही शिव हिये हरषे ।
नभ ते सुरन सुमन बहु बरसे ॥

तुम्हरी महिमा बुद्धि बड़ाई ।
शेष सहसमुख सके न गाई ॥

मैं मतिहीन मलीन दुखारी ।
करहूं कौन विधि विनय तुम्हारी ॥

भजत रामसुन्दर प्रभुदासा ।
जग प्रयाग, ककरा, दुर्वासा ॥

अब प्रभु दया दीना पर कीजै ।
अपनी शक्ति भक्ति कुछ दीजै ॥

॥ दोहा ॥
श्री गणेश यह चालीसा,
पाठ करै कर ध्यान ।
नित नव मंगल गृह बसै,
लहे जगत सन्मान ॥

सम्बन्ध अपने सहस्त्र दश,
ऋषि पंचमी दिनेश ।
पूरण चालीसा भयो,
मंगल मूर्ती गणेश ॥

            "
         </body>
        </html>
    </string>
</resources>