<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_ganesh_chalisa"
        android:enabled="true"
        android:icon="@drawable/ganeshdev"
        android:title="@string/menu_ganesh_chalisa"
        android:visible="true" />
    <item
        android:id="@+id/nav_shiv_chalisa"
        android:icon="@drawable/lordshiva"
        android:title="@string/menu_shiv_chalisa" />
    <item
        android:id="@+id/nav_hanuman_chalisa"
        android:icon="@drawable/hanumandev"
        android:title="@string/menu_hanuman_chalisa" />
    <item
        android:id="@+id/nav_ashtak_mantra"
        android:icon="@drawable/hanumandev"
        android:title="@string/menu_ashtak_mantra" />
    <item
        android:id="@+id/nav_durga_chalisa"
        android:icon="@drawable/maadurga"
        android:title="@string/menu_durga_chalisa" />
</menu>